--- a/data-engineer.html
+++ b/data-engineer.html
@@ -70,7 +70,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/indigo/jobs/1944593'>Job Application for Data Engineer, Data Intelligence at Indigo</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=or7lbfwO&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nMp9rMw2'>Freedom Financial Network Careers - Data Engineer</a></h5> 
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nordcloud.join.com/jobs/448546-senior-data-engineer'>Job @ Nordcloud (Munich): Senior Data Engineer | JOIN</a></h5> 
+<h5><a href='https://nordcloud.join.com/jobs/448546-senior-data-engineer'>Job @ Nordcloud (Munich): Senior Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich Munich</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/i85jb4somqgiye1g7m5zzuaabo'>Manufacturing Data Engineer | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/i85jb4somqgiye1g7m5zzuaabo'>Manufacturing Data Engineer | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI  Madison</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -143,7 +143,7 @@
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/tj3jjyqpyactjaprxu9cbyg6gh'>Data Engineer up to $300,000 | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/tj3jjyqpyactjaprxu9cbyg6gh'>Data Engineer up to $300,000 | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -199,7 +199,7 @@
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698537998-data-engineer'>Bosch Group Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698537998-data-engineer'>Bosch Group Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -229,7 +229,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698522300-senior-ui-ux-engineer-data-engineering-5-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (5-month Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698522300-senior-ui-ux-engineer-data-engineering-5-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (5-month Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -243,7 +243,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oqBbbfw7&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nmIToMwC'>NICE Careers - Data Engineer - Associate</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oqBbbfw7&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nmIToMwC'>NICE Careers - Data Engineer - Associate</a></h5> 
 <p><span class="badge badge-light">Austin, Texas  Chicago, Illinois  Austin Chicago</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -259,7 +259,7 @@ systems,?...</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/boxycharm/jobs/1937585'>Job Application for BI Data Engineer at Boxy Charm</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxycharm/jobs/1937585'>Job Application for BI Data Engineer at Boxy Charm</a></h5> 
 <p><span class="badge badge-light">Pembroke Pines, FL  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -311,7 +311,7 @@ systems,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/peak6/jobs/1937436'>Job Application for Data Engineer at PEAK6</a></h5> 
+<h5><a href='https://boards.greenhouse.io/peak6/jobs/1937436'>Job Application for Data Engineer at PEAK6</a></h5> 
 <p><span class="badge badge-light">Portland, OR  ?  Irvine</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -335,7 +335,7 @@ systems,?...</p>
 <p><span class="badge badge-light">New York, NY  ?  New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424393-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424393-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -412,7 +412,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698287112-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698287112-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
